gccida/c2/compute_use_by_pseudos
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/compute_use_by_pseudos/src/reload1.c:1068:44: error: use of undeclared identifier 'xmm'
si128 = _mm_load_si128( ( const __m128i *)&xmm*(short *)0x641440); 
                                           ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/compute_use_by_pseudos/src/reload1.c:1069:41: error: use of undeclared identifier 'xmm'
v5 = _mm_load_si128( ( const __m128i *)&xmm*(short *)0x641420); 
                                        ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/compute_use_by_pseudos/src/reload1.c:1070:41: error: use of undeclared identifier 'xmm'
v6 = _mm_load_si128( ( const __m128i *)&xmm*(short *)0x641450); 
                                        ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/compute_use_by_pseudos/src/reload1.c:1099:15: error: use of undeclared identifier 'off_7088B8'
fancy_abort( &off_7088B8[4], 573, "compute_use_by_pseudos"); 
              ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/compute_use_by_pseudos/src/reload1.c:1109:26: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v18 = ( ( unsigned int)( mode_class_0[v16] - 5) < 2) + 1; 
                         ^~~~~~~~~~~~
                         mode_class
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/compute_use_by_pseudos/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/compute_use_by_pseudos/src/reload1.c:1138:7: error: invalid conversion between vector type '__m128d' (vector of 2 'double' values) and integer type 'unsigned long long' of different size
v26 = ( __m128d)v19; 
      ^~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/compute_use_by_pseudos/src/reload1.c:1141:5: error: assigning to '__m128d' (vector of 2 'double' values) from incompatible type 'long long'
v29 = 0LL; 
    ^ ~~~
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/compute_use_by_pseudos/src/reload1.c:1145:53: error: invalid conversion between vector type '__m128i' (vector of 2 'long long' values) and integer type 'long long' of different size
v31 = _mm_unpacklo_epi32( _mm_add_epi32( v27, v25), ( __m128i)0LL); 
                                                    ^~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/compute_use_by_pseudos/src/reload1.c:1147:53: error: invalid conversion between vector type '__m128i' (vector of 2 'long long' values) and integer type 'long long' of different size
v33 = _mm_unpacklo_epi32( _mm_add_epi32( v28, v25), ( __m128i)0LL); 
                                                    ^~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/compute_use_by_pseudos/src/reload1.c:1148:4: error: member reference base type '__m128i' (vector of 2 'long long' values) is not a structure or union
v32.m128i_i64[0] = v5.m128i_i64[0] << v31.m128i_i8[0]; 
~~~^~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/compute_use_by_pseudos/src/reload1.c:1148:22: error: member reference base type '__m128i' (vector of 2 'long long' values) is not a structure or union
v32.m128i_i64[0] = v5.m128i_i64[0] << v31.m128i_i8[0]; 
                   ~~^~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/compute_use_by_pseudos/src/reload1.c:1148:42: error: member reference base type '__m128i' (vector of 2 'long long' values) is not a structure or union
v32.m128i_i64[0] = v5.m128i_i64[0] << v31.m128i_i8[0]; 
                                      ~~~^~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/compute_use_by_pseudos/src/reload1.c:1151:17: error: member reference base type '__m128d' (vector of 2 'double' values) is not a structure or union
*( _QWORD *)&v34.m128d_f64[0] = v5.m128i_i64[0] << v33.m128i_i8[0]; 
             ~~~^~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/compute_use_by_pseudos/src/reload1.c:1151:35: error: member reference base type '__m128i' (vector of 2 'long long' values) is not a structure or union
*( _QWORD *)&v34.m128d_f64[0] = v5.m128i_i64[0] << v33.m128i_i8[0]; 
                                ~~^~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/compute_use_by_pseudos/src/reload1.c:1151:55: error: member reference base type '__m128i' (vector of 2 'long long' values) is not a structure or union
*( _QWORD *)&v34.m128d_f64[0] = v5.m128i_i64[0] << v33.m128i_i8[0]; 
                                                   ~~~^~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/compute_use_by_pseudos/src/reload1.c:1158:54: error: member reference base type '__m128i' (vector of 2 'long long' values) is not a structure or union
v19 = _mm_or_si128( _mm_shuffle_epi32( v35, 78), v35).m128i_u64[0]; 
      ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~
16 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/compute_use_by_pseudos/src/obj/reload1.o] Error 1
